[package]
name = "iperf-sys"
version = "0.1.0"
edition = "2021"
links = "iperf"
license = "BSD-3-Clause"
keywords = ["ffi", "bindings", "iperf", "iperf3"]
categories = ["external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
autotools = "0.2.6"
bindgen = "0.68.1"
